fixed spacing works arrowse

--- a/public/styles/category.scss
+++ b/public/styles/category.scss
@@ -76,6 +76,7 @@ div.year-box {
 
 .work-flex {
   align-items: center;
+  justify-content: space-between;
 }
 
 .link-arrow {
